Fixed height to prevent button shifting the layout

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .container {
-  /* height: 80%; */
+  height: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
